Merge upstream release 78.2.0 to GE Master