@@ -15,16 +15,17 @@
 
 package org.cloudfoundry.identity.uaa.oauth.token;
 
+import org.cloudfoundry.identity.uaa.constants.ClientAuthentication;
+
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TokenConstants {
     public enum TokenFormat {
         OPAQUE("opaque"),
         JWT("jwt");
 
-        private String stringValue;
+        private final String stringValue;
 
         TokenFormat(String string) {
             this.stringValue = string;
@@ -34,7 +35,7 @@ public class TokenConstants {
             return this.stringValue;
         }
 
-        static public TokenFormat fromStringValue(String stringValue) {
+        public static TokenFormat fromStringValue(String stringValue) {
             for (TokenFormat tokenFormat : TokenFormat.values()) {
                 if (tokenFormat.stringValue.equalsIgnoreCase(stringValue)) {
                     return tokenFormat;
@@ -43,8 +44,8 @@ public class TokenConstants {
             return null;
         }
 
-        static public List<String> getStringValues() {
-            return Arrays.stream(TokenFormat.values()).map(TokenFormat::getStringValue).collect(Collectors.toList());
+        public static List<String> getStringValues() {
+            return Arrays.stream(TokenFormat.values()).map(TokenFormat::getStringValue).toList();
         }
     }
 
@@ -62,7 +63,11 @@ public class TokenConstants {
     public static final String GRANT_TYPE_AUTHORIZATION_CODE = "authorization_code";
     public static final String GRANT_TYPE_IMPLICIT = "implicit";
 
+    public static final String CLIENT_AUTH_NONE = ClientAuthentication.NONE;
+    public static final String CLIENT_AUTH_EMPTY = "empty";
+    public static final String CLIENT_AUTH_SECRET = "secret";
+    public static final String CLIENT_AUTH_PRIVATE_KEY_JWT = ClientAuthentication.PRIVATE_KEY_JWT;
+
     public static final String ID_TOKEN_HINT_PROMPT = "prompt";
     public static final String ID_TOKEN_HINT_PROMPT_NONE = "none";
-
 }
